--- a/index.html
+++ b/index.html
@@ -263,10 +263,10 @@
                     <span></span>
                 </div>
                 <div class="dropdown-menu">
-                    <a href="https://t.me/Dvalgtr" target="_blank">Telegram</a>
+                    <a href="https://t.me/@dvdvdvdal" target="_blank">Telegram</a>
                     <a href="https://github.com/Dvalgtr" target="_blank">GitHub</a>
-                    <a href="https://tiktok.com/@Dvalgtr" target="_blank">TikTok</a>
-                    <a href="https://twitter.com/Dvalgtr" target="_blank">Twitter</a>
+                    <a href="https://tiktok.com/@dv4ldv" target="_blank">TikTok</a>
+                    <a href="https://twitter.com/trashlikey0u" target="_blank">Twitter</a>
                 </div>
             </div>
         </header>
@@ -312,7 +312,7 @@
             </div>
         </main>
         <footer>
-            © Dvalgtr 2025
+            © Made with ♥️ by Dave
         </footer>
     </div>
     <script>
@@ -465,4 +465,4 @@
         window.addEventListener('load', generatePassword);
     </script>
 </body>
-                            </html>
+</html>
